--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <!-- Favicon - begin -->
-    <link rel="shortcut icon" href="//static.thaithaison.linknk/xyz/sonlt/favicon.ico">
-    <link rel="icon" type="image/png" sizes="16x16" href="//static.thaithaison.linknk/xyz/sonlt/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="//static.thaithaison.linknk/xyz/sonlt/favicon-32x32.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="//static.thaithaison.linknk/xyz/sonlt/apple-touch-icon.png">
-    <link rel="manifest" href="//static.thaithaison.linknk/xyz/sonlt/site.webmanifest">
-    <link rel="mask-icon" href="//static.thaithaison.linknk/xyz/sonlt/safari-pinned-tab.svg" color="#2d89ef">
+    <link rel="shortcut icon" href="//static.thaithaison.link/xyz/sonlt/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="//static.thaithaison.link/xyz/sonlt/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="//static.thaithaison.link/xyz/sonlt/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="//static.thaithaison.link/xyz/sonlt/apple-touch-icon.png">
+    <link rel="manifest" href="//static.thaithaison.link/xyz/sonlt/site.webmanifest">
+    <link rel="mask-icon" href="//static.thaithaison.link/xyz/sonlt/safari-pinned-tab.svg" color="#2d89ef">
     <meta name="msapplication-TileColor" content="#2d89ef">
-    <meta name="msapplication-config" content="https://static.thaithaison.linknk/xyz/sonlt/browserconfig.xml">
+    <meta name="msapplication-config" content="https://static.thaithaison.link/xyz/sonlt/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <!-- Favicon - end -->
     <meta property="og:title" content="Làm sạch URL: Gỡ bỏ UTM, fbclid, gclid và href.li">
