--- a/404.html
+++ b/404.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="refresh" content="0; url=https://lamsachurl.thaison.site" />
+        <meta http-equiv="refresh" content="0; url=https://lamsachurl.thaison.page" />
         <script type="text/javascript">
-            window.location.href = "https://lamsachurl.thaison.site";
+            window.location.href = "https://lamsachurl.thaison.page";
         </script>
     </head>
 </html>
